objects/AR_Obj1__c.object
<CustomObject>
    <description>Add Comment for this  ARObj1 test</description>
    <fields>
        <fullName>AR_SField1__c</fullName>
        <description>Add Description1</description>
        <label>AR-SField1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AR_SField2__c</fullName>
        <description>Add Description2</description>
        <label>AR-SField2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AR_SField3__c</fullName>
        <label>AR-SField3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>F2__c</fullName>
        <label>F2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pl2__c</fullName>
        <label>Pl2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AR-Obj1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AR-Obj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR-Obj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ARPValidationRule1</fullName>
        <active>true</active>
        <description>Add validate comment</description>
        <errorConditionFormula>ISBLANK( AR_SField2__c )</errorConditionFormula>
        <errorDisplayField>AR_SField2__c</errorDisplayField>
        <errorMessage>Please Enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ARSValidationRule1</fullName>
        <active>true</active>
        <description>Add Comment  for this Validationrule</description>
        <errorConditionFormula>ISBLANK(AR_SField1__c)</errorConditionFormula>
        <errorDisplayField>AR_SField1__c</errorDisplayField>
        <errorMessage>Please enter a phone number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ARSValidationRule3</fullName>
        <active>true</active>
        <description>Add comment for this  ARSValidationRule3</description>
        <errorConditionFormula>ISBLANK( AR_SField3__c )</errorConditionFormula>
        <errorDisplayField>AR_SField3__c</errorDisplayField>
        <errorMessage>Please enter avalue</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ARpValidationRule4</fullName>
        <active>true</active>
        <description>Add comment</description>
        <errorConditionFormula>ISBLANK( AR_SField4__c )</errorConditionFormula>
        <errorMessage>PLease enter avalue</errorMessage>
    </validationRules>
</CustomObject>